kubernetes/manifests/prometheus/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    cnrm.cloud.google.com/project-id: arikkfir
  name: prometheus
