kubernetes/manifests/prometheus/prometheus-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-kfirs-com-http
spec:
  entryPoints:
    - web
  routes:
    - match: HostRegexp(`prometheus.kfirs.com`)
      kind: Rule
      middlewares:
        - name: redirect-to-https
          namespace: traefik
      services:
        - kind: Service
          name: prometheus-server
          port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-kfirs-com-https
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostRegexp(`prometheus.kfirs.com`)
      kind: Rule
      services:
        - kind: Service
          name: prometheus-server
          port: 80
  tls:
    secretName: prometheus-kfirs-com-tls
